2002-07-16	Eric Norum <eric.norum@usask.ca>

	* New driver for the Intel EtherExpressPro (82559ER) chip.
	* network/if_fxp.c, network/if_fxpreg.h, network/if_fxpvar.h,
	network/pci.h: New file.
	* network/Makefile.am: Modified to reflect above.

2001-05-14	Till Straumann <strauman@slac.stanford.edu>

	* bootloader/Makefile.am, console/Makefile.am, pci/Makefile.am:
	Per PR215 address the following issues:
	    - _IO_BASE, _ISA_MEM_BASE and PCI_DRAM_OFFSET
	      are no longer defined by libcpu (powerpc/shared/include/io.h)
	      but by the BSP (who is the only one to know the values)
	    - the affected BSP (shared/motorola) headers have been fixed
	      in a separate "libbsp/powerpc/shared" patch.
	    - the DEC 21140 driver (libchip/network/dec21140.c) has been
	      fixed to use PCI_DRAM_OFFSET instead of PREP_PCI_DRAM_OFFSET.
	      and PCI_MEM_BASE instead of PREP_ISA_MEM_BASE. PCI_MEM_BASE
	      is to be defined by the BSP who is using this driver.
	    - the DEC driver also has been fixed to use the newer
	      rtems_bsp_delay_in_bus_cycles() instead of the obsolete
	      delay_in_bus_cycles().

2002-05-07	Chris Johns <ccj@acm.org>

	* c/src/libchip/network/i82586.c: Per PR210, adjust the mbuf
	lengths to remove the ethernet header as the FreeBSD (RTEMS)
	stack requires it to be stripped.

2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/dec21140.c: Reflect changes to powerpc's
	rtems/score/cpu.h. Use __PPC__ for gcc-3.x compliance.

2002-04-11	Chris Johns <ccj@acm.org>

	* network/rtems_bsdnet.h: To address PR59, added the drv_ctrl driver
	control block field to the ifconfig network driver structure. This
	field is needed by the i82586 driver which was ported from NetBSD
	as it had better hardware abstraction.

2002-04-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/i82586.c: Include <string.h>.
	* network/sonic.c: Ditto.

2002-04-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_DEFINE(CPU_U32_FIX) for sparc.
